--- a/docs/components/breadcrumb.html
+++ b/docs/components/breadcrumb.html
@@ -1,37 +1,27 @@
-<div>
-  <h1>Breadcrumb</h1>
-  <p>Breadcrumbs show the current page's location within a navigational hierarchy.</p>
-</div>
+<h1>Breadcrumb</h1>
+<p>Breadcrumbs show the current page's location within a navigational hierarchy.</p>
 
-<div>
-  <h2>Dependencies</h2>
-  <ul>
-    <li><a href="#icon">ui-icon</a></li>
-  </ul>
-</div>
+<h2>Dependencies</h2>
+<ul>
+  <li><a href="#icon">ui-icon</a></li>
+</ul>
 
-<div>
-  <h2>Attributes</h2>
-  <p>aria-label - static (required). Must be set manually.</p>
-</div>
+<h2>Attributes</h2>
+<p>aria-label - static (required). Must be set manually.</p>
 
-<section class="content">
-
-  <div class="content-item">
-    <div>Default</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-breadcrumb>
-          <ol>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Notifications</a></li>
-            <li>Article</li>
-          </ol>
-        </ui-breadcrumb>
-      </div>
-      <div class="example-code">
-
+<h3>Default</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-breadcrumb>
+      <ol>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Settings</a></li>
+        <li><a href="#">Notifications</a></li>
+        <li>Article</li>
+      </ol>
+    </ui-breadcrumb>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-breadcrumb&gt;
   &lt;ol&gt;
@@ -42,9 +32,5 @@
   &lt;/ol&gt;
 &lt;/ui-breadcrumb&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
-
-</section>
+</div>
