--- a/docs/components/portal.html
+++ b/docs/components/portal.html
@@ -1,20 +1,13 @@
-<div>
-  <h1>Portal</h1>
-  <p>A root-level DOM node for modals, overlays, and dialogs.</p>
-</div>
+<h1>Portal</h1>
+<p>A root-level DOM node for modals, overlays, and dialogs.</p>
 
-<div>
-  <h2>Info</h2>
-  <p>Place just before the closing <code>&lt;/ui-root&gt;</code> tag.</p>
-  <p>Avoids z-index conflicts, and guarantees that modals, overlays, and dialogs render above all other content.</p>
-</div>
+<h2>Info</h2>
+<p>Place just before the closing <code>&lt;/ui-root&gt;</code> tag.</p>
+<p>Avoids z-index conflicts, and guarantees that modals, overlays, and dialogs render above all other content.</p>
 
-<section class="content">
-  <div class="content-item">
-    <div>Placement</div>
-    <div class="example">
-      <div class="example-code">
-
+<h3>Placement</h3>
+<div class="example">
+  <div class="example-code">
 <pre><code>
 &lt;body&gt;
   &lt;ui-root&gt;
@@ -24,8 +17,5 @@
   &lt;/ui-root&gt;
 &lt;/body&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
-</section>
+</div>
